--- a/vue_validate.html
+++ b/vue_validate.html
@@ -10,8 +10,28 @@
 </head>
 <body>
 	<div class="container">
-		<input type="text" name="field" class="form-control" required maxlength="30" pattern="^[a-zA-Z][a-zA-Z0-9_]*$" />
+		<validator name="validation1">
+		    <form novalidate>
+		      <div class="username-field">
+		        <label for="username">username:</label>
+		        <input id="username" type="text" v-validate:username="['required']">
+		      </div>
+		      <div class="comment-field">
+		        <label for="comment">comment:</label>
+		        <input id="comment" type="text" v-validate:comment="{ maxlength: 256 }">
+		      </div>
+		      <div class="errors">
+		        <p v-if="$validation1.username.required">Required your name.</p>
+		        <p v-if="$validation1.comment.maxlength">Your comment is too long.</p>
+		      </div>
+		      <input type="submit" value="send" v-if="$validation1.valid">
+		    </form>
+		  </validator>
 	</div>
-	
 </body>
 </html>
+<script>
+	new Vue({
+	  el: '#app'
+	})
+</script>
