--- a/vue_form_validate.html
+++ b/vue_form_validate.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <script src="./assets/vue/vue.min.js" type="text/javascript"></script>
+    <script src="/assets/vue/vue-form/vue-form.js"></script>
 </head>
 <body>
     <div id="app">
